--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,8 @@ GOOGLE_APPLICATION_CREDENTIALS=path-to-credentials.json
 GOOGLE_CLOUD_PROJECT=your-cloud-project-id
 NEXT_PUBLIC_ENABLE_VISUAL_CONTENT=true
 
-# OpenRouter API Key
-OPENROUTER_API_KEY=your-openrouter-api-key
+# Groq API Keys
+GROQ_API_KEY=your-groq-api-key
 
 # Cache settings (Redis optional)
 CACHE_TTL=86400
