--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vectora",
+  "name": "vectora",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.5",
+    "@ai-sdk/groq": "^1.2.9",
     "@ai-sdk/openai": "^1.3.7",
     "@ai-sdk/react": "^1.1.21",
     "@clerk/nextjs": "4.30.0",
