--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@google-cloud/vision": "^5.1.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@mdxeditor/editor": "^3.32.3",
     "@openrouter/ai-sdk-provider": "^0.4.3",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
