--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tabler/icons-react": "^3.31.0",
+    "@vercel/postgres": "^0.10.0",
     "ai": "^4.1.54",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
@@ -53,7 +54,7 @@
     "mermaid-react": "^0.1.0",
     "next": "15.2.3",
     "next-themes": "^0.4.4",
-    "pg": "^8.14.1",
+    "pg": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -77,7 +78,7 @@
     "@testing-library/dom": "^10.4.0",
     "@types/d3": "^7.4.3",
     "@types/node": "^20",
-    "@types/pg": "^8.11.11",
+    "@types/pg": "^8.15.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
